Corrigindo a visualizacao do offsite.

--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -80,7 +80,12 @@
                             <li><a href="/storages/add">Adicionar</a></li>
                         </ul>
                     </li>
-					<li><a href="#">Offsite</a></li>
+					<li><a href="#">Offsite</a>
+					    <ul>
+                            <li><a href="/offsite/list_uploadrequest">Uploads ativos</a></li>
+                            <li><a href="/offsite/list_downloadrequest">Downloads ativos</a></li>
+                        </ul>
+				    </li>
 					<li><a href="#">Ferramentas</a></li>
 					<li><a href="#">Configurações</a>
                         <ul>
