--- a/nimbus/offsite/templates/select_storage.html
+++ b/nimbus/offsite/templates/select_storage.html
@@ -1,23 +1,42 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1> Por favor, selecione o destino onde deseja realizar a cópia de segurança </h1>
+<div class="block">
 
-<div class="bloco_texto">
+	<div class="block_head">
+		<div class="bheadl"></div>
+		<div class="bheadr"></div>
+		<h2>Selecionar dispositivo</h2>
+	</div>		<!-- .block_head ends -->
 
-<form action={% url nimbus.offsite.views.copy_files_to_storage %} method="post">
-    {% for device in devices %}
-        <input type="radio" name="device" value="{{device}}" /> {{device}}
-        <br />
-    {% empty %}
-        Por favor, conecte um hd ou pendrive externo.
-    {% endfor %}
+    <div class="block_content">
 
-    {% if devices %}
-    <br />
-    <button type="submit"><span>Prosseguir</span></button>
-    {%endif%}
-</form>
+        <h1>Por favor, selecione o destino onde deseja realizar a cópia de segurança:</h1>
+
+        <div class="bloco_texto">
+
+        <form action="{% url nimbus.offsite.views.copy_files_to_storage %}" method="post">
+            {% for device in devices %}
+                <p>
+                    <input type="radio" name="device" value="{{device}}" id="{{device}}" class="radio" />
+                    <label for="{{device}}">{{device}}</label>
+                </p>
+            {% empty %}
+                <p>Nenhum dispositivo foi encontrado. Por favor conecte um hd ou pendrive externo.</p>
+            {% endfor %}
+
+            {% if devices %}
+                <p><input type="submit" class="submit" value="Prosseguir" /></p>
+            {%endif%}
+        </form>
+        </div>
+        
+        <div class="clear"></div>
+    </div>
+
+    <div class="bendl"></div>
+	<div class="bendr"></div>
+
 </div>
 
 
