--- a/nimbus/restore/templates/restore_list.html
+++ b/nimbus/restore/templates/restore_list.html
@@ -34,6 +34,82 @@
 
     <div class="block_content">
         <form action="#" method="post" onsubmit="return false;">
+            
+            <script type="text/javascript" charset="utf-8">
+            $(document).ready(function(){
+                
+                function update_tree(root_path) {
+                    get_tree_path = "/restore/get_tree/";
+                    
+                    wrapper = $("*[path="+root_path+"]").parent();
+                    
+                    if (wrapper.find('ul').length) {
+                        var ul = wrapper.find('>ul');
+                        if (ul.hasClass('open')) {
+                            ul.removeClass('open').addClass('closed');
+                            wrapper.find('ul').slideUp();
+                        } else if (ul.hasClass('closed')) {
+                            ul.removeClass('closed').addClass('open');
+                            wrapper.find('ul').hide();
+                            wrapper.find('>ul').slideDown();
+                        }
+                        return false;
+                    }
+                    
+                    $.post(get_tree_path, {path: root_path}, function(data)
+                    {
+                        root = $("*[path="+root_path+"]");
+                        var ul = $("<ul>").addClass("open").hide();
+                        ul.insertAfter($("*[path="+root_path+"]"));
+                        for (var item in data) {
+                            path = data[item];
+                            
+                            var input = $("<input>").attr("type", "checkbox").attr("name", "path").val(path);
+                            
+                            // If is a directory.
+                            if (path.match("/$") == "/" || path.match("\\$") == "\\") {
+                                attr_class = "directory";
+                                var file = $("<a>").attr("href", "#").attr("path", path).text(path);
+                            } else {
+                                attr_class = "file";
+                                var file = $("<span>").attr("path", path).text(path);
+                            }
+                            
+                            input.appendTo(file);
+                            
+                            var li = $("<li>").addClass(attr_class);
+                            file.appendTo(li);
+                            li.appendTo(ul);
+                        }
+                        ul.slideDown();
+                        $(".tree a").unbind("click").click(function()
+                        {
+                            update_tree($(this).attr("path"));
+                            return false;
+                        });
+                        console.log(data);
+                    }, "json");
+                }
+                
+                $('#update_tree').click(function()
+                {
+                    // $('.tree').attr("path", "/");
+                    update_tree('/');
+                    return false;
+                });
+                
+                $(".tree a").click(function()
+                {
+                    update_tree($(this).attr("path"));
+                    return false;
+                });
+            });
+            </script>
+            <a href="#" id="update_tree">atualizar arvore</a>
+            <ul class="tree">
+                <li class="directory"><a href="#" path="/">/</a></li>
+            </ul>
+            
             {% if computer %}
                 <p><a href="/computers/list">Listar todos os computadores</a></p>
                 <div class="computers">
@@ -209,8 +285,7 @@
     				<label>Buscar arquivo:</label> <input type="text" class="text small" /> <input type="submit" class="submit small" value="Buscar" />
     			</p>
 
-                <div class="filetree" id="filetree" style="float: left; width: 30%" ref="/restore/get_tree/root"></div>
-                <div class="filetree" id="filetree" style="width: 60%; float: right" ref="/restore/get_tree/1"></div>
+                ... Aqui entrará a ávore.
                 <div class="clear"></div>
                 
                 <h2 class="titulo_step">4. Restauração</h2>
