--- a/nimbus/offsite/templates/list_downuploadrequest.html
+++ b/nimbus/offsite/templates/list_downuploadrequest.html
@@ -57,6 +57,12 @@
 
     $(document).ready(function(){
         startit()
+        $('.atualizar_agora').click(function(){
+            update_table();
+            countDownTime = countDownInterval;
+            clearTimeout(counter);
+            startit();
+        });
     });
 </script>
 
@@ -79,16 +85,16 @@
 	<div class="block_head">
 		<div class="bheadl"></div>
 		<div class="bheadr"></div>
-		<h2>{{list_type}} ativos</h2>
+		<h2>Downloads ativos</h2>
 		<div class="right">
-            A lista será atualizada em <span class="tempo_restante">10</span> segundos.
+            A lista será atualizada em <span class="tempo_restante">10</span> segundos. <small>(<a href="#" class="atualizar_agora">atualizar agora</a>)</small>
 		</div>
 	</div>		<!-- .block_head ends -->
 
     <div class="block_content">
 
         {% if not object_list %}
-            <p>Não existem {{list_type}} ativos no momento.</p>
+            <p>Não existem downloads ativos no momento.</p>
         {% else %}
             <table class="request_list" style="width: 100%">
                 <thead>
